# ucos2-c66x

./: .gitignore  CMakeLists.txt  Makefile  core-sel.mk  linker.cmd  makefile
boot/: main.c  resource_table.h  types.h  vector.asm
fatfs/: diskio.c  ff.c  ff.h  ffconf.h
kernel/: os_cfg.h  os_core.c  os_dbg.c  os_flag.c  os_mbox.c  os_mem.c  os_mutex.c  os_q.c  os_sem.c  os_task.c  os_time.c  os_tmr.c  ucos_ii.h
klib/: apex.c  apex.h  def.h  elf.c  elf.h  fat32.c  fat32.h  ipc.c  ipc.h  isr.c  isr.h  mbr.c  mbr.h  mutex.c  mutex.h  partition.c  partition.h  partition_conf.h  port.c  port.h  printf.c  printf.h
platform/c66x/: os_cpu.h  os_cpu_a.asm  os_cpu_c.c
platform/csp/: intc.c  intc.h  intc_s.asm  mailbox.c  mailbox.h  mmio.h  spinlock.c  spinlock.h  timer.c  timer.h  types.h  uart.c  uart.h  xmc.c  xmc.h
platform/driver/: intc.c  intc.h  mailbox.c  mailbox.h  mmc.c  mmc.h  mmio.h  spinlock.c  spinlock.h  timer.c  timer.h  types.h  uart.c  xmc.c  xmc.h
task/: Makefile  app.c  demo.txt  part_0.c  part_0.h  part_1.c  part_1.h  part_2.c  part_2.h  part_3.c  part_3.h  part_4.c  part_5.c  part_6.c  part_7.c  root.c  snprintf.c  snprintf.h  syscall.c  syscall.h  syscall_s.asm  task.c  task_conf.h  task_types.h
ulib/: syscall.c  syscall.h  syscall_s.asm
user/: Makefile  stub.c  stub.h  task.c  task.cmd
